force-app/main/default/objects/POSTransactions__b/POSTransactions__b.object-meta.xml
<CustomObject>
    <label>POSTransactions</label>
    <pluralLabel>POSTransactions</pluralLabel>
</CustomObject>