force-app/main/default/objects/POSTransactions__b/fields/POSID__c.field-meta.xml
<CustomField>
    <fullName>POSID__c</fullName>
    <label>POSID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>