force-app/main/default/objects/POSTransactions__b/fields/TXDateTime__c.field-meta.xml
<CustomField>
    <fullName>TXDateTime__c</fullName>
    <label>TXDateTime</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>