force-app/main/default/objects/POSTransactions__b/fields/TXValue__c.field-meta.xml
<CustomField>
    <fullName>TXValue__c</fullName>
    <label>TXValue</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>