force-app/main/default/objects/POSTransactions__b/fields/vendorcode__c.field-meta.xml
<CustomField>
    <fullName>vendorcode__c</fullName>
    <label>vendorcode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>